update contact card with correct layout/spacing

--- a/src/Components/RecipeListModule/RecipeListModule.module.scss
+++ b/src/Components/RecipeListModule/RecipeListModule.module.scss
@@ -9,7 +9,3 @@
   justify-content: center;
   text-align: center;
 }
-
-.dataList {
-  // todo
-}
