--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -13,7 +13,3 @@
   justify-content: center;
   text-align: center;
 }
-
-.dataList {
-  // todo
-}
